# CppSpace

./: README.md
Practise/: CMakeLists.txt
Practise/pp1-clangd-cmake/: .clang-format  CMakeLists.txt  cp-tasks.txt  helloword.cpp  pp1-clangd-cmake
Practise/pp1-clangd-cmake/.cache/clangd/index/: helloword.cpp.A1A08BE00CC46473.idx
Practise/pp1-clangd-cmake/src/: boo.cpp  boo.hpp
Practise/pp2-ZooManagementSystem/: CMakeLists.txt  animal.cpp  elephant.cpp  lion.cpp  main.cpp
Practise/pp2-ZooManagementSystem/src/: animal.h  elephant.h  lion.h
Practise/pp3-StudentManager/: CMakeLists.txt
Practise/pp3-StudentManager/include/: SManager.hpp  Student.hpp
Practise/pp3-StudentManager/src/: SManager.cpp  Student.cpp  main.cpp
Practise/pp4-XGBoostTest/include/: TimeSeriesPredictor.hpp
Practise/pp4-XGBoostTest/src/: TimeSeriesPredictor.cpp  main.cpp
Practise/pp5-MultithreadedLogging/: CMakeLists.txt
Practise/pp5-MultithreadedLogging/include/: Logger.hpp
Practise/pp5-MultithreadedLogging/src/: Logger.cpp  main.cpp
Practise/pp6-AcademicAchievementStatisticsConsoleProgram/: csvToClassification.cpp  main.cpp  t3  test2.cpp  test3.cpp  公共课成绩.csv  文科成绩.csv  理科成绩.csv
Practise/pp6-AcademicAchievementStatisticsConsoleProgram/test1/: csvToCpp.cpp  csvtest2  公共课成绩.csv  文科成绩.csv  理科成绩.csv
test/: 01  02  t1.cpp
